<resources>
    <string name="app_name">android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_fill_out_all_the_details_to_continue">Please fill out all the details to continue.</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="password_confirm">PASSWORD CONFIRM</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="back_to_login">Back to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_email_address_below_to_receive_a_password_reset_link">Enter your email address below to receive a password reset link.</string>
    <string name="send_email">Send Email</string>
    <string name="password_reset">Password Reset</string>
</resources>