<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.ForgotPasswordFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:layout_constraintWidth_percent=".75">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:textColor="@color/columbia_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_address_below_to_receive_a_password_reset_link"
            android:textColor="@color/myrtle_green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:textColorHint="@color/myrtle_green"
            app:boxStrokeColor="#000"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/myrtle_green"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/myrtle_green">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_round"
                android:backgroundTint="#040909"
                android:inputType="textEmailAddress"
                android:textColor="@color/columbia_blue"
                android:textColorHint="@color/myrtle_green"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="11sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/send_reset_email_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/aquamarine"
            android:text="@string/send_email"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/app_background" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/goToLoginButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/back_to_login"
        android:scaleType="fitCenter"
        android:src="@drawable/go_back_arrow_draw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/aquamarine" />

</androidx.constraintlayout.widget.ConstraintLayout>